kubernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  <SERVICE_NAME>
  namespace: <NAMESPACE_NAME>
# Remove comment if you want to use metallb to assign an IP Address out of your IP Pool
#  annotations:
#    metallb.universe.tf/address-pool: default  
spec:
  selector:
    app:  <APP_NAME>
  # --- Service Type Cluster IP --- Remove this line
  # type:  ClusterIP
  # ports:
  # - name:  http
  #   port:  8080
  #   targetPort: 80
  #   protocol: TCP  # optional protocol
  
  # --- Service Type Nodeport --- Remove this line
  # type:  NodePort
  # ports:
  # - name:  http
  #   port:  80
  #   nodePort: 30001
  #   protocol: TCP  # optional protocol
  
  # --- Service Type Loadbalancer --- Remove this line
  # type:  LoadBalancer
  # ports:
  # - name:  http
  #   port:  80
  #   targetPort: 30001
  #   protocol: TCP  # optional protocol
